--- a/L00177804_Golf/Pages/MemberBookings/Create.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Create.cshtml
@@ -14,24 +14,20 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Booking.Name" class="control-label"></label>
-                <input asp-for="Booking.Name" class="form-control" />
-                <span asp-validation-for="Booking.Name" class="text-danger"></span>
+                <label asp-for="Booking.FirstName" class="control-label"></label>
+                <input asp-for="Booking.FirstName" class="form-control" />
+                <span asp-validation-for="Booking.FirstName" class="text-danger"></span>
             </div>
-          
+            <div class="form-group">
+                <label asp-for="Booking.LastName" class="control-label"></label>
+                <input asp-for="Booking.LastName" class="form-control" />
+                <span asp-validation-for="Booking.LastName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Booking.BookingDateTime" class="control-label"></label>
-                <div class="input-group">
-                    <input asp-for="Booking.BookingDateTime" class="form-control" />
-                    <div class="input-group-append">
-                        <span class="input-group-text"><i class="far fa-clock"></i></span>
-                    </div>
-                </div>
+                <input asp-for="Booking.BookingDateTime" class="form-control" />
                 <span asp-validation-for="Booking.BookingDateTime" class="text-danger"></span>
             </div>
-
-        
-
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -45,26 +41,4 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-8d5SgFh6zQggK5W5+5fyM6/1nMkq3Ky+H/6K7U6hJU6ms+U6EZKj9RcT54FbxIuT" crossorigin="anonymous">
-
-    <!-- Bootstrap DateTimePicker CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-
-    <!-- Bootstrap DateTimePicker JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-
-    <script>
-        $(document).ready(function () {
-            $('#datetimepicker').datetimepicker({
-                format: 'YYYY-MM-DD HH:mm:ss'
-            });
-        });
-    </script>
-
 }
