--- a/L00177804_Golf/Pages/Shared/_Layout.cshtml
+++ b/L00177804_Golf/Pages/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/L00177804_Golf.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/jquery-timepicker/jquery.timepicker.min.css" />
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,6 +63,8 @@
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="~/lib/jquery-timepicker/jquery.timepicker.min.js"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </html>
