--- a/L00177804_Golf/Pages/MemberBookings/Create.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Create.cshtml
@@ -5,44 +5,73 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Booking</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Booking.FirstName" class="control-label"></label>
-                <input asp-for="Booking.FirstName" class="form-control" />
-                <span asp-validation-for="Booking.FirstName" class="text-danger"></span>
+<div class="d-flex justify-content-center" style="padding-top:50px">
+        <div class="row">
+            <div class="col-md-12">
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Booking.FirstName" class="control-label">First Name</label>
+                        <input asp-for="Booking.FirstName" class="form-control" />
+                        <span asp-validation-for="Booking.FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Booking.LastName" class="control-label">Surname</label>
+                        <input asp-for="Booking.LastName" class="form-control" />
+                        <span asp-validation-for="Booking.LastName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Booking.BookingTimeOnly" class="control-label">Select Tee time</label>
+                        <div class="input-group">
+                            <input type="text" id="timepicker" input asp-for="Booking.BookingTimeOnly" class="form-control" />
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="far fa-clock"></i></span>
+                            </div>
+                        </div>
+                        <span asp-validation-for="Booking.BookingTimeOnly" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Booking.BookingDateOnly" class="control-label">Select Date</label>
+                        <div class="input-group">
+                            <input type="text" id="datepicker" asp-for="Booking.BookingDateOnly" class="form-control" />
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
+                            </div>
+                        </div>
+                        <span asp-validation-for="Booking.BookingDateOnly" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Booking.LastName" class="control-label"></label>
-                <input asp-for="Booking.LastName" class="form-control" />
-                <span asp-validation-for="Booking.LastName" class="text-danger"></span>
+        </div>
+    </div>
+
+<!-- Modal -->
+<div class="modal fade" id="bookingModal" tabindex="-1" role="dialog" aria-labelledby="bookingModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="bookingModalLabel">Booking Error</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div class="form-group">
-                <label asp-for="Booking.BookingTimeOnly" class="control-label"></label>
-                <input type="text" id="timepicker" input asp-for="Booking.BookingTimeOnly" class="form-control" />
-                <span asp-validation-for="Booking.BookingTimeOnly" class="text-danger"></span>
+            <div class="modal-body">
+                <p>You can only book once per day</p>
             </div>
-            <div class="form-group">
-                <label asp-for="Booking.BookingDateOnly" class="control-label"></label>
-                <input type="text" id="datepicker" asp-for="Booking.BookingDateOnly" class="form-control" />
-                <span asp-validation-for="Booking.BookingDateOnly" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
+
+
+
+
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
@@ -62,4 +91,6 @@
             });
         });
     </script>
+
+
 }
