--- a/L00177804_Golf/wwwroot/css/site.css
+++ b/L00177804_Golf/wwwroot/css/site.css
@@ -47,3 +47,16 @@ th.sortable.desc i::before {
    
     content: "\2193"; /* Unicode character for down arrow */
 }
+.input-group-text i {
+    font-size: 1.5rem;
+}
+.form-control {
+    border-radius: 10px;
+}
+.input-group-text {
+    align-items: center;
+}
+.form-group {
+    padding: 5px;
+}
+
