Added Placeholders for Search and Edit on Titles

--- a/L00177804_Golf/Pages/Index.cshtml
+++ b/L00177804_Golf/Pages/Index.cshtml
@@ -41,8 +41,9 @@
 
 <div class="about-section">
     <h1>About Us Page</h1>
-    <p>Some text about who we are and what we do.</p>
-    <p>Resize the browser window to see that this page is responsive by the way.</p>
+    <p>Welcome to King Johns Golf Club, where the love for golf meets a picturesque environment.</p>
+    <p>King Johns Golf Club is a premier 18-hole golf course located in the heart of the stunning Irish countryside. Our golf course is designed to challenge golfers of all levels, with a combination of tight fairways, well-manicured greens, and tricky bunkers, making it a true test of skill and accuracy.</p>
+  
 </div>
 
 
