--- a/L00177804_Golf/Pages/MemberBookings/Create.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Create.cshtml
@@ -2,7 +2,7 @@
 @model L00177804_Golf.Pages.MemberBookings.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Book today at";
 }
 
 
