--- a/L00177804_Golf/Pages/Memberships/Create.cshtml
+++ b/L00177804_Golf/Pages/Memberships/Create.cshtml
@@ -2,7 +2,7 @@
 @model L00177804_Golf.Pages.Memberships.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Register at";
 }
 
 <!-- Section: Design Block -->
