--- a/L00177804_Golf/Pages/MemberBookings/Index.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Index.cshtml
@@ -2,7 +2,7 @@
 @model L00177804_Golf.Pages.MemberBookings.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Booking at";
 }
 
 <div div class="container-md" style="padding-top: 50px">
@@ -11,7 +11,7 @@
             <form method="get" class="form-group">
                 <div class="input-group">
                     <input type="hidden" name="handler" value="search" />
-                    <input type="text" id="AutoFill" name="CurrentFilter" value="@Model.CurrentFilter" class="form-control rounded" />
+                    <input type="text" id="AutoFill" name="CurrentFilter" placeholder="Search Member Bookings" value="@Model.CurrentFilter" class="form-control rounded" />
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-primary">Filter</button>
                         <a asp-page="./Index">Back</a>
