--- a/L00177804_Golf/Pages/Shared/_Layout.cshtml
+++ b/L00177804_Golf/Pages/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2023 - L00177804_Golf - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2023 - L00177804-JOHN FITZGERALD- <a asp-area="" asp-page="/Privacy">Privacy</a>
     </div>
 </footer>
 <!-- Jscript plugins-->
