--- a/L00177804_Golf/Pages/MemberBookings/Index.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Index.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Booking at";
 }
-
+<!-- CENTER ELEMENTS JUST-->
 <div div class="container-md" style="padding-top: 50px">
     <div class="row">
         <div class="col-md-12">
@@ -18,9 +18,10 @@
                     </div>
                 </div>
             </form>
-
         </div>
     </div>
+
+    <!---->
     <div class="row">
         <div class="col-md-12">
             <table class="table">
