--- a/L00177804_Golf/Pages/MemberBookings/Index.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Index.cshtml
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <!---->
+    <!-- DISPLAY TABLE FOR BOOKINGS-->
     <div class="row">
         <div class="col-md-12">
             <table class="table">
@@ -39,7 +39,6 @@
                         <th>
                             TEE Date
                         </th>
-                     @*   <th></th>*@
                     </tr>
                 </thead>
                 <tbody>
@@ -73,9 +72,7 @@
 
 @section scripts{
 
- @*   <link rel="stylesheet" href="~/lib/jquery-ui/themes/smoothness/jquery-ui.css" />
-    <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>*@
-
+    <!-- SCRIPT TO RETURN LIST OF MEMBERS FROM DATABASE-->
     <script type="text/javascript">
         $(function () {
             $("#AutoFill").autocomplete({
