Added Razor Pages for Deletemodify

--- a/L00177804_Golf/Pages/Shared/_Layout.cshtml
+++ b/L00177804_Golf/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" asp-page="/MemberBookings/Create">Make a Booking</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" asp-page="/MemberBookings/Index">Cancel a Booking</a>
+                        <a class="dropdown-item" asp-page="/MemberBookings/DeleteModify">Cancel a Booking</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" asp-page="/MemberBookings/Index">View Bookings</a>
                     </div>
