--- a/L00177804_Golf/Pages/Memberships/DeleteModify.cshtml
+++ b/L00177804_Golf/Pages/Memberships/DeleteModify.cshtml
@@ -5,57 +5,99 @@
     ViewData["Title"] = "DeleteModify";
 }
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Membership[0].FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Membership[0].LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Membership[0].Gender)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Membership[0].Handicap)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Membership[0].Phone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Membership[0].Email)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Membership) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Gender)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Handicap)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+<!-- CENTER ELEMENTS JUST-->
+<div div class="container-md" style="padding-top: 50px">
+    <div class="row">
+        <div class="col-md-12">
+            <form method="get" class="form-group">
+                <div class="input-group">
+                    <input type="hidden" name="handler" value="search" />
+                    <input type="text" id="AutoFill" name="CurrentFilter" placeholder="Enter Email Address" value="@Model.CurrentFilter" class="form-control rounded" />
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-primary">Filter</button>
+                        <a asp-page="./Index">Back</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- TABLE DISPLAYED OF MEMBER NAME ASSCOIATED WITH EMAIL-->
+@if (!string.IsNullOrEmpty(Model.CurrentFilter))
+{
+    <div div class="container-md" style="padding-top: 50px">
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Membership[0].FirstName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Membership[0].LastName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Membership[0].Gender)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Membership[0].Handicap)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Membership[0].Phone)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Membership[0].Email)
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Membership)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.FirstName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.LastName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Gender)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Handicap)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Phone)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Email)
+                                </td>
+                                <td>
+                                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 }
-    </tbody>
-</table>
+<!-- SCRIPTS -->
+@section scripts{
+
+    <!-- SCRIPT TO RETURN LIST OF MEMBERS FROM DATABASE-->
+    <script type="text/javascript">
+        $(function () {
+            $("#AutoFill").autocomplete({
+                source: 'MemberBookings?handler=Names',
+                minLength: 3
+            });
+        });
+    </script>
+
+}
