--- a/L00177804_Golf/Pages/MemberBookings/DeleteModify.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/DeleteModify.cshtml
@@ -5,14 +5,14 @@
     ViewData["Title"] = "DeleteModify";
 }
 
-
 <!-- CENTER ELEMENTS JUST-->
+<div div class="container-md" style="padding-top: 50px">
     <div class="row">
         <div class="col-md-12">
             <form method="get" class="form-group">
                 <div class="input-group">
                     <input type="hidden" name="handler" value="search" />
-                    <input type="text" id="AutoFill" name="CurrentFilter" placeholder="Search Member Bookings" value="@Model.CurrentFilter" class="form-control rounded" />
+                    <input type="text" id="AutoFill" name="CurrentFilter" placeholder="Enter Email Address" value="@Model.CurrentFilter" class="form-control rounded" />
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-primary">Filter</button>
                         <a asp-page="./Index">Back</a>
@@ -21,58 +21,65 @@
             </form>
         </div>
     </div>
+</div>
+<!-- TABLE DISPLAYED OF MEMBER NAME ASSCOIATED WITH EMAIL-->
 @if (!string.IsNullOrEmpty(Model.CurrentFilter))
 {
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Booking[0].FirstName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Booking[0].LastName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Booking[0].Handicap)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Booking[0].BookingTimeOnly)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Booking[0].BookingDateOnly)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Booking)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FirstName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Handicap)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.BookingTimeOnly)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.BookingDateOnly)
-                    </td>
-                    <td>
-                        <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <div div class="container-md" style="padding-top: 50px">
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>
+                                Name
+                            </th>
+                           
+                            <th>
+                                @Html.DisplayNameFor(model => model.Booking[0].Handicap)
+                            </th>
+                            <th>
+                                Time
+                            </th>
+                            <th>
+                                Date
+                            </th>
+                            <th>
+                                Edit/View/Delete
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Booking)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.FullName)
+                                </td>
+                               
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Handicap)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.BookingTimeOnly)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.BookingDateOnly)
+                                </td>
+                                <td>
+                                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 }
+<!-- SCRIPTS -->
 @section scripts{
 
     <!-- SCRIPT TO RETURN LIST OF MEMBERS FROM DATABASE-->
