--- a/L00177804_Golf/Pages/MemberBookings/Details.cshtml
+++ b/L00177804_Golf/Pages/MemberBookings/Details.cshtml
@@ -5,39 +5,43 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Booking</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking.FirstName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Booking.FirstName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking.LastName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Booking.LastName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking.BookingTimeOnly)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Booking.BookingTimeOnly)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking.BookingDateOnly)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Booking.BookingDateOnly)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Booking?.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+<h1>Welcome back @Html.DisplayFor(model => model.Booking.FirstName)</h1>
+<div class="container" style="padding-top:50px">
+    <div class="text-center">
+        <!-- Membership details -->
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Booking.FirstName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Booking.FirstName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Booking.LastName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Booking.LastName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Booking.BookingTimeOnly)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Booking.BookingTimeOnly)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Booking.BookingDateOnly)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Booking.BookingDateOnly)
+            </dd>
+        </dl>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <a asp-page="./Edit" asp-route-id="@Model.Booking?.Id" class="btn btn-primary">Edit</a>
+        </div>
+        <div class="col-auto">
+            <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+        </div>
+    </div>
 </div>
