--- a/L00177804_Golf/Pages/Memberships/Details.cshtml
+++ b/L00177804_Golf/Pages/Memberships/Details.cshtml
@@ -4,52 +4,57 @@
 @{
     ViewData["Title"] = "Details";
 }
+<h1>Welcome back @Html.DisplayFor(model => model.Membership.FirstName)</h1>
+    <div class="container" style = "padding-top:50px">
+        <div class="text-center">
+            <!-- Membership details -->
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Membership.FirstName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Membership.FirstName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Membership.LastName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Membership.LastName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Membership.Gender)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Membership.Gender)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Membership.Handicap)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Membership.Handicap)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Membership.Phone)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Membership.Phone)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Membership.Email)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Membership.Email)
+                </dd>
+            </dl>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <a asp-page="./Edit" asp-route-id="@Model.Membership?.Id" class="btn btn-primary">Edit</a>
+            </div>
+            <div class="col-auto">
+                <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+            </div>
+        </div>
+    </div>
 
-<h1>Details</h1>
 
-<div>
-    <h4>Membership</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.FirstName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Membership.FirstName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.LastName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Membership.LastName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.Gender)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Membership.Gender)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.Handicap)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Membership.Handicap)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.Phone)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Membership.Phone)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Membership.Email)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Membership.Email)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Membership?.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
